# ATIV_tp1

./: .gitignore  CMakeLists.txt  README.md
include/: contour.h  hough.h  hough_cercle.h  hough_line.h  kernel.h  path_contour.h  point.h  seuil.h
mains/: tp1.cpp  tp2.cpp
src/: contour.cpp  hough.cpp  hough_cercle.cpp  hough_line.cpp  kernel.cpp  main.cpp  path_contour.cpp  point.cpp  seuil.cpp
